# databricks-data-ops

./: .gitignore  CHANGELOG.md  README.md  databricks.yml  main.py  pyproject.toml
docs/: PATTERNS.md  architecture.md  getting_started.md  pipeline_design.md
domains/member/pipelines/: bronze.py  silver.py
resources/: data_ops_library.yml  member.yml
src/data_ops/: README.md  __init__.py
src/data_ops/operations/: __init__.py  volume_extractor.py
src/data_ops/tests/: README.md  __init__.py
src/data_ops/tests/operations/: test_volume_extractor.py
src/data_ops/tests/utils/: test_cleanup_prefixed_tables.py  test_errors.py  test_logging.py  test_table_prefix.py
src/data_ops/utils/: __init__.py  cleanup_prefixed_tables.py  db_helper.py  errors.py  logging.py  table_prefix.py
