[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-ops"
version = "0.1.0"
description = "Common operations library for Databricks data pipelines with domain-driven architecture"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Data Engineering Team" }
]
license = { text = "MIT" }
dependencies = [
    "databricks-connect>=17.2.0,<17.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "chispa>=0.10.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "poethepoet>=0.24.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/data_ops"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Poe the Poet task runner configuration
[tool.poe.env]
PYTHONPATH = "src:domains"

[tool.poe.tasks]
# Test tasks
test = "python -m unittest discover -s src/data_ops/tests -p 'test_*.py' -v"

# Code quality tasks
lint = "ruff check src/"
format = "black src/"
format-check = "black --check src/"
type-check = "mypy src/"

# Combined tasks
check = ["format-check", "lint", "type-check"]
fix = ["format", "lint"]
